Red-Academy/Project-02/css/style.css
/*CSS FOR CUSTOM FONT*/

font-face {
    font-family: 'Gotham';
    src: url('../fonts/gotham/Gotham-Bold.eot');
    src: url('../fonts/gotham/Gotham-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/gotham/Gotham-Bold.woff') format('woff'), url('../fonts/gotham/Gotham-Bold.ttf') format('truetype'), url('../fonts/gotham/Gotham-Bold.svg#Gotham-Bold') format('svg');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'Gotham';
    src: url('../fonts/gotham/Gotham-Book.eot');
    src: url('../fonts/gotham/Gotham-Book.eot?#iefix') format('embedded-opentype'), url('../fonts/gotham/Gotham-Book.woff') format('woff'), url('../fonts/gotham/Gotham-Book.ttf') format('truetype'), url('../fonts/gotham/Gotham-Book.svg#Gotham-Book') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Gotham';
    src: url('../fonts/gotham/Gotham-Medium.eot');
    src: url('../fonts/gotham/Gotham-Medium.eot?#iefix') format('embedded-opentype'), url('../fonts/gotham/Gotham-Medium.woff') format('woff'), url('../fonts/gotham/Gotham-Medium.ttf') format('truetype'), url('../fonts/gotham/Gotham-Medium.svg#Gotham-Medium') format('svg');
    font-weight: medium;
    font-style: normal;
}

/*MAIN CSS SET UP*/
body {
    font-family: 'Gotham', Arial, sans-serif;
}

h1 {
    text-align: center;
    margin: 0;
    padding-top: 20px;
    padding-bottom: 20px;
    font-weight: bold;
    font-size: 400%;
    font-weight: bold;
}

.img-responsive {
    width: 100%;
}

section {
  width: 100vw;
}

/*CSS ANIMATION*/
@-webkit-keyframes backgroundAnimate {
    from {
        left: 0;
        top: 0;
    }
    to {
        left: -10000px;
        top: -2000px;
    }
}

@keyframes backgroundAnimate {
    from {
        left: 0;
        top: 0;
    }
    to {
        left: -10000px;
        top: -2000px;
    }
}


/*CSS FOR THE HEADER SECTION*/
header {
    background: url("../img/header-img/fernanda-nauata-phone-horizontal-header-img.jpg") #343434;
    background-size: cover;
    width: 100vw;
    height: 100vh;
}

.mobilecontainer {
    width: 100vw;
    height: 100vh;
}

.mobilemenu {
    padding: 0;
    margin: 0;
    padding: 3%;
    position: fixed;
    z-index: 1000;
}

.mobilemenu-zindex {
    color: white;
    z-index: 1500;
}

menu {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.sidebar-menu {
    top: 0;
    right: 0;
    bottom: 0;
    width: 45%;
    background: #343434;
    position: fixed;
    z-index: 10;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
}

.sidebar-menu a {
    margin-top: 10%;
    text-align: center;
    color: #E5E5E7;
}

.sidebar-menu hr {
    margin: 0;
    margin-top: 10%;
    border-top: 1px solid #292929;
    width: 100%;
}

.headercontent {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    width: 100vw;
    height: 100vh;
}


/*CSS FOR THE ABOUT ME SECTION*/
.aboutme {
    width: 100vw;
    height: 100vh;
    display: none;
}

.aboutme-left {
    width: 100%;
    height: 100%;
    display: inline-block;
}

.aboutme-left-back,
.aboutme-mobile-back {
    background: url("../img/about-me-pattern.png") repeat #F9FAFB;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: -1;
    -webkit-animation-name: backgroundAnimate;
    -webkit-animation-duration: 500s;
    -webkit-animation-timing-function: linear;
    -webkit-animation-iteration-count: infinite;
    -moz-animation-name: backgroundAnimate;
    -moz-animation-duration: 5s;
    -moz-animation-timing-function: linear;
    -moz-animation-iteration-count: infinite;
    -o-animation-name: backgroundAnimate;
    -o-animation-duration: 500s;
    -o-animation-timing-function: linear;
    -o-animation-iteration-count: infinite;
    animation-name: backgroundAnimate;
    animation-duration: 500s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}

.aboutme-right {
    background-color: #ECEFF1;
    width: 100%;
    height: 100%;
    float: right;
    display: none;
}

.aboutme-left-container {
    padding: 3%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -ms-flex-line-pack: center;
    align-content: center;
    height: 100%;
}

.aboutme-left-container picture {
    display: block;
    margin: 0 auto;
    width: 60%;
    text-align: center;
}

.aboutme-right-container {
    padding: 3%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -ms-flex-line-pack: center;
    align-content: center;
    height: 100%;
    height: 100vh;
}

figcaption {
    padding-top: 5%;
    font-size: 200%;
    font-weight: normal;
}

.resumebutton {
    border: solid #a0a0a0 2px;
    padding: 2%;
    border-radius: 3px;
    color: #a0a0a0;
}

.resumebutton:hover {
    border: solid #9A3A4C 2px;
    color: #9A3A4C;
    text-decoration: none;
}


/*CSS FOR THE SLIDE PORTFOLIO SECTION*/
#pinContainer {
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    -webkit-perspective: 1000;
    perspective: 1000;
}

#slideContainer {
    width: 400vw;
    /* to contain 4 panels, each with 100% of window width */
    height: 100vh;
    position: relative;
}

.panel {
    height: 100vh;
    width: 100vw;
    /* relative to parent -> 25% of 400% = 100% of window width */
    float: left;
}

.panel {
    height: 100%;
    width: 25%;
    /* relative to parent -> 25% of 400% = 100% of window width */
    float: left;
}

.overlap-text {
  position: absolute;
  width: 100vw;
}

.overlap-text h1 {
  padding-bottom: 0;
}

.overlap-text p {
  width: 80vw;
  display: block;
  margin: 0 auto;
  text-align: center;
}

.portfoliobutton-container {
  width: 100vw;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  margin-top: 1%;
}

.portfoliobutton {
    border: solid #333333 2px;
    padding: 2%;
    border-radius: 3px;
    color: #333333;
}
.portfoliobutton:hover {
    border: solid #9A3A4C 2px;
    color: #9A3A4C;
    text-decoration: none;
}

/*CSS FOR THE SLIDE SECOND PORTFOLIO SECTION*/
.secondportfolio {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    background-color: #E5E5E7;
}

.secondportfolio h2 {
  text-align: center;
}

.carousel {
    margin: 0 auto;
    max-width: 400px;
}

.carousel div {
    background-color: #343434;
    height: 100%;
    position: relative;
}

.carousel div img {
    height: 100%;
    width: 100%;
}

.slick-prev:before, .slick-next:before, .slick-prev:hover:before, .slick-prev:focus:before, .slick-next:hover:before, .slick-next:focus:before {
  display: hidden;
}

/*CSS FOR THE CONTACT SECTION*/
.contact {
    padding-bottom: 20px;
    background-color: #E5E5E7;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}
.message {
  width: 342px;
}

form button {
  display: block;
  margin: 0 auto;
  border: solid #a0a0a0 2px;
  padding: 2%;
  border-radius: 3px;
  background-color: #E5E5E7;
}

form button:hover {
    border: solid #9A3A4C 2px;
    color: #9A3A4C;
    text-decoration: none;
}

.socialmedia a {
    color: #343434;
}

.socialmedia {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: distribute;
    justify-content: space-around;
}

.socialmedia a:hover {
    color: #9A3A4C;
}

/*CSS FOR THE FOOTER SECTION*/
footer {
    background-color: #343434;
    color: #E5E5E7;
    line-height: 300%;
    text-align: center;
}

/*MEDIA QUERIES*/
@media screen and (min-width: 600px) {
    header {
        background: url("../img/header-img/fernanda-nauata-tablet-horizontal-header-img.jpg") #343434;
    }
    .aboutme {
        display: block;
    }
    .aboutme-mobile {
      height: 0;
    }
    .aboutme-mobile .aboutme-left,
    .aboutme-mobile .aboutme-right {
      display: none;
    }
    .aboutme-left {
        width: 50%;
        height: 100%;
        display: inline-block;
    }
    .aboutme-right {
        width: 50%;
        height: 100%;
        float: right;
        display: block;
    }
    .socialmedia a:not(:last-child) {
        padding-right: 20%;
    }
    .portfoliobutton-container {
      margin-top: 0;
    }
    .resumebutton,
    .portfoliobutton {
        padding: 0.5% 0.5% 0.5% 0.5%;
    }
    .carousel {
        max-width: 100vw;
    }
}

@media screen and (min-width: 1140px) {
    header {
        background: url("../img/header-img/fernanda-nauata-large-header-img.jpg") no-repeat center center fixed #343434;
    }
    .sidebar-menu {
        width: 20%;
    }
    .container {
        max-width: 1140px;
    }
    .overlap-text p {
      width: 40vw;
    }
    .aboutme {
        height: 100vh;
        width: 100vw;
    }
    .aboutme-container picture {
        width: 40%;
    }
}

@media screen and (min-width: 2040px) {
    header {
        background: url("../img/header-img/fernanda-nauata-xlarge-header-img.jpg") no-repeat center center fixed #343434;
    }

    .portfoliobutton-container {
      margin-top: 1%;
    }
}

